--- a/package.json
+++ b/package.json
@@ -4,16 +4,27 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel public/index.html",
-    "build": "parcel build public/index.html --dist-dir ./dist"
+    "build": "parcel build public/index.html --dist-dir ./dist",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/three": "^0.156.0",
     "buffer": "^5.5.0||^6.0.0",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
     "parcel": "^2.9.3",
+    "prettier": "^3.3.3",
     "process": "^0.11.10",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "typescript-eslint": "^8.13.0"
   },
   "dependencies": {
     "@react-three/drei": "^9.86.3",
