--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,9 +6,13 @@ command=npm run frames-serve
 autorestart=true
 stdout_logfile=/dev/fd/1
 stderr_logfile=/dev/fd/2
+stopasgroup=true
+stopsignal=QUIT
 
 [program:start]
 command=npm run start
 autorestart=true
 stdout_logfile=/dev/fd/1
 stderr_logfile=/dev/fd/2
+stopasgroup=true
+stopsignal=QUIT
